# python-project-lvl1

./: .setup.cfg.swp  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
brain_games/: cli.py
brain_games/scripts/: .brain_games.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py
